--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </a>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a>
+                <li><a href="#hero">Home</a>
                 </li>
                 <li><a href="#about">About</a>
                 </li>
