removed form action

--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                 <h2 class="home-section-title">
                     Contact Us</h2>
                 <div class="contact-grid">
-                    <form action="/index.html"
-                        class="contact-form">
+                    <form class="contact-form">
                         <div
                             class="form-control firstname">
                             <label for="firstname"
